# Linux-FC

./: .gitignore  CMakeLists.txt
.github/workflows/: Linux-CI.yml
FC/: CMakeLists.txt
FC/HAL/: CMakeLists.txt
FC/HAL/base/: Device.h  DeviceInterface.h  HALInterface.h  I2CManager.h  I2CManagerInterface.h  UtilsInterface.h
FC/HAL/linux/: CMakeLists.txt  EpollThread.cpp  EpollThread.h  HALLinux.cpp  HALLinux.h  I2CBus.cpp  I2CBus.h  I2CDevice.cpp  I2CDevice.h  I2CManager.cpp  I2CManager.h  Mutex.cpp  Mutex.h  Thread.cpp  Thread.h  TimerFd.cpp  TimerFd.h  Utils.cpp  Utils.h  mutex.cpp  mutex.h
FC/board/: BoardDescriptor.h  CMakeLists.txt
FC/board/blue/: BoardDescriptor.cpp
FC/boards/: BoardDescriptor.h  CMakeLists.txt
FC/boards/blue/: BoardDescriptor.cpp
FC/core/: CMakeLists.txt
FC/core/controller/: CMakeLists.txt  Controller.cpp  Controller.h
FC/core/sensor/: CMakeLists.txt  ImuBackend.h  ImuBackendFactory.cpp  ImuBackendFactory.h  ImuDef.h  ImuMPU9250.cpp  ImuMPU9250.h  ImuMPUXXXXRegs.h  ImuSensor.cpp  ImuSensor.h
FC/utils/: CMakeLists.txt  Guard.h  Logger.cpp  Logger.h  Types.h  Vector3.h  guard.h  logger.cpp  logger.h
cmake/: bbblue_toolchain.cmake
docs/: device_design.md  imu_design.md  imu_factory_design_pattern.md
docs/linux/: device_arch.md
src/: CMakeLists.txt
test/: CMakeLists.txt  ImuSensorTest.cpp  Test.h
